Stop stretching of images

--- a/css/style.css
+++ b/css/style.css
@@ -14,7 +14,6 @@ img {
     display: inline;
     width: 200px;
     height: 100px;
-    overflow: hidden;
 }
 #footer {
     width: 100%;
@@ -87,4 +86,7 @@ body {
 }
 .stop-stretch {
     overflow: hidden;
+    width: 200px;
+    height: 100px;
+}
 }
